--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,24 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.23</version>
+  </dependency>
+  <dependency>
+        <groupId>org.fusesource.jansi</groupId>
+        <artifactId>jansi</artifactId>
+        <version>2.3.2</version>
+    </dependency>
+    <dependency>
+    <groupId>com.github.lalyos</groupId>
+    <artifactId>jfiglet</artifactId>
+    <version>0.0.8</version>
+</dependency>
+
   </dependencies>
+
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
